rename component, add logic for final page

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -7,7 +7,8 @@
                 "duration": "Dauer: {{duration}} min",
                 "maxPoints": "max. Punkte: {{points}}"
             },
-            "startExam": "Klausur starten"
+            "startExam": "Klausur starten",
+            "summary": "Zusammenfassung"
         },
         "examManagement": {
             "title": "Klausur Verwaltung"
