--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -7,7 +7,8 @@
                 "duration": "Duration: {{duration}} min",
                 "maxPoints": "max. Points: {{points}}"
             },
-            "startExam": "Start Exam"
+            "startExam": "Start Exam",
+            "summary": "Summary"
         },
         "examManagement": {
             "title": "Exam Management"
