Implement deletion of exercise group

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -3,6 +3,11 @@
         "exam": {
             "title": "Exam"
         },
+        "exerciseGroup": {
+            "created": "Neue Übungsgruppe erstellt",
+            "updated": "Übungsgruppe bearbeitet",
+            "deleted": "Übungsgruppe mit Titel {{ param }} gelöscht"
+        },
         "examManagement": {
             "title": "Klausur Verwaltung",
             "exerciseGroup": {
