--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -1,10 +1,27 @@
 {
     "artemisApp": {
         "exam": {
-            "title": "Exam"
+            "title": "Klausur",
+            "created": "Neue Klausur erstellt",
+            "updated": "Klausur bearbeitet"
         },
         "examManagement": {
-            "title": "Klausur Verwaltung"
+            "title": "Klausur Verwaltung",
+            "createExam": "Erstelle eine neue Klausur",
+            "editExam": "Bearbeite eine existierende Klausur",
+            "courseTitle": "Kursname",
+            "examId": "Klausur ID",
+            "examTitle": "Klausurname",
+            "visibleDate": "Sichtbar ab",
+            "startDate": "Bearbeitungszeit ab",
+            "endDate": "Bearbeitungszeit bis",
+            "maxPoints": "Anzahl an erreichbaren Punkten",
+            "numberOfExercisesInExam": "Anzahl an Aufgabengruppen",
+            "randomizeQuestionOrder": "Zufällige Reihenfolge der Aufgabengruppen",
+            "startText": "Klausurbeginn Text",
+            "endText": "Klausurende Text",
+            "confirmationStartText": "Klausurbeginn Bestätigungstext",
+            "confirmationEndText": "Klausurende Bestätigungstext"
         }
     }
 }
