--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -8,7 +8,7 @@
             },
             "title": "Exam",
             "startExam": "Start Exam",
-            "summary": "Summary"
+            "summary": "Summary",
             "created": "New exam created",
             "updated": "Exam updated"
 
