--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -10,6 +10,11 @@
             "created": "New exam created",
             "updated": "Exam updated"
         },
+        "exerciseGroup": {
+            "created": "New exercise group created",
+            "updated": "Exercise group updated",
+            "deleted": "Deleted exercise group with title {{ param }}"
+        },
         "examManagement": {
             "title": "Exam Management",
             "createExam": "Create a new exam",
@@ -27,14 +32,29 @@
             "endText": "Exam end text",
             "confirmationStartText": "Exam start confirmation text",
             "confirmationEndText": "Exam end confirmation text",
+            "assessmentDashboard": "Assessment Dashboard",
+            "studentExams": "Student Exams",
+            "students": "Students",
+            "exerciseGroups": "Exercise Groups",
+            "exerciseGroup": {
+                "create": "Create new Exercise Group",
+                "update": "Edit Exercise Group",
+                "type": "Type",
+                "title": "Title",
+                "maxPoints": "Max points",
+                "mandatory": "Mandatory",
+                "optional": "Optional",
+                "noExercises": "No exercises have been added yet.",
+                "delete": {
+                    "question": "Are you sure you want to delete the exercise group <strong>{{ title }}</strong>? All associated exercises are also deleted.",
+                    "typeNameToConfirm": "Please type in the name of the exercise group to confirm."
+                },
+                "addTextExercise": "Add text exercise"
+            },
             "delete": {
                 "question": "Are you sure you want to permanently delete the Exam <strong>{{ title }}</strong>? This action can NOT be undone!",
                 "typeNameToConfirm": "Please type in the name of the Exam to confirm."
-            },
-            "exerciseGroups": "Exercise Groups",
-            "assessmentDashboard": "Assessment Dashboard",
-            "studentExams": "Student Exams",
-            "students": "Students"
+            }
         }
     }
 }
