Client implementation of the exam student overview (#1628)

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -1,6 +1,11 @@
 {
     "artemisApp": {
         "exam": {
+            "overview": {
+                "start": "Beginn: {{start}}",
+                "duration": "Dauer: {{duration}} min",
+                "maxPoints": "max. Punkte: {{points}}"
+            },
             "title": "Klausur",
             "visible": "Sichtbar",
             "startDate": "Beginn",
