--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -1,6 +1,11 @@
 {
     "artemisApp": {
         "exam": {
+            "overview": {
+                "start": "Start: {{start}}",
+                "duration": "Duration: {{duration}} min",
+                "maxPoints": "max. Points: {{points}}"
+            },
             "title": "Exam",
             "visible": "Visible",
             "startDate": "Start Date",
