Start and Final Exam Page (#1651)

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -7,11 +7,14 @@
                 "maxPoints": "max. Punkte: {{points}}"
             },
             "title": "Klausur",
+            "startExam": "Klausur starten",
+            "summary": "Zusammenfassung",
             "visible": "Sichtbar",
             "startDate": "Beginn",
             "endDate": "Ende",
             "duration": "Dauer",
             "nrOfStudents": "Anzahl der registrierten Studenten",
+
             "created": "Neue Klausur erstellt",
             "updated": "Klausur bearbeitet"
         },
