--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -7,6 +7,8 @@
                 "maxPoints": "max. Points: {{points}}"
             },
             "title": "Exam",
+            "startExam": "Start Exam",
+            "summary": "Summary",
             "visible": "Visible",
             "startDate": "Start Date",
             "endDate": "End Date",
