--- a/src/main/webapp/i18n/en/exercise-actions.json
+++ b/src/main/webapp/i18n/en/exercise-actions.json
@@ -26,7 +26,7 @@
             "copiedUrl": "Copied URL",
             "uploadFile": "Upload a file",
             "viewTeam": "Team",
-            "sshKeyTip": "To use ssh, you need to add an ssh-key to you {server:bitbucket/gitlab} account {link:here}."
+            "sshKeyTip": "To use ssh, you need to add an ssh-key to your account {link:here}."
         }
     }
 }
