--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -17,6 +17,10 @@
             "created": "New exam created",
             "updated": "Exam updated"
         },
+        "examParticipation": {
+            "connected": "Connected. Your answers will be saved every 60s.",
+            "disconnected": "Not connected. Go online to save your changes to the server, but you can continue working!"
+        },
         "exerciseGroup": {
             "created": "New exercise group created",
             "updated": "Exercise group updated",
