--- a/src/main/webapp/i18n/de/alert.json
+++ b/src/main/webapp/i18n/de/alert.json
@@ -4,6 +4,7 @@
             "alert": "Achtung",
             "disconnected": "Du bist nicht mehr mit dem Artemis Server verbunden. Bitte überprüfe deine Internet Verbindung.",
             "reconnected": "Du bist wieder mit dem Artemis Server verbunden."
-        }
+        },
+        "outdatedAlert": "<b>Veraltete Artemis Version:</b> Du benutzt eine alte Artemis Version. Bitte aktualisiere die Seite um Inkompatibilitäten zu vermeiden."
     }
 }
