--- a/src/main/webapp/i18n/en/alert.json
+++ b/src/main/webapp/i18n/en/alert.json
@@ -4,6 +4,7 @@
             "alert": "Alert",
             "disconnected": "You are not connected to the Artemis Server. Please check your internet connection.",
             "reconnected": "You were reconnected to the Artemis Server."
-        }
+        },
+        "outdatedAlert": "<b>Outdated Artemis Version:</b> You are using an outdated Artemis version. Please refresh the page to prevent incompatibilities."
     }
 }
