--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -60,7 +60,7 @@
             "students": "Students",
             "examStudents": {
                 "registeredStudents": "Registered students",
-                "outOf": "out of",
+                "searchResults": "search results",
                 "usersPerPage": "{{number}} students per page",
                 "showAllUsers": "Show all students",
                 "searchForUsers": "Register a student for this exam by searching for login or name",
