--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -15,7 +15,9 @@
             "duration": "Duration",
             "nrOfStudents": "Registered Students",
             "created": "New exam created",
-            "updated": "Exam updated"
+            "updated": "Exam updated",
+            "consentText": "I hereby confirm with my full name, representing my signature, that I have read the conditions of participation and will adhere to them for the duration of the exam.",
+            "falseName": "Entered name is incorrect. Please try again!"
         },
         "exerciseGroup": {
             "created": "New exercise group created",
