--- a/src/main/webapp/i18n/de/exercise-actions.json
+++ b/src/main/webapp/i18n/de/exercise-actions.json
@@ -25,7 +25,8 @@
             "copyUrl": "URL kopieren",
             "copiedUrl": "URL kopiert",
             "uploadFile": "Datei hochladen",
-            "viewTeam": "Team"
+            "viewTeam": "Team",
+            "sshKeyTip": "Um SSH zu nutzen, musst du {link:hier} einen SSH-Schlüssel zu deinem Account hinzufügen."
         }
     }
 }
