--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -68,12 +68,28 @@
                 "searchNoResults": "Keine Studenten gefunden",
                 "login": "Login",
                 "name": "Name",
+                "firstName": "Vorname",
+                "lastName": "Nachname",
                 "email": "E-Mail",
                 "visibleRegistrationNumber": "Matrikelnummer",
                 "removeFromGroup": {
                     "modalQuestion": "Soll der Student mit dem Login <strong>{{ title }}</strong> wirklich von dieser Prüfung abgemeldet werden?"
                 },
-                "importStudents": "Studenten importieren"
+                "importStudents": {
+                    "buttonLabel": "Studenten importieren",
+                    "dialogTitle": "Studenten importieren nach:",
+                    "introText": "Mit diesem Dialog können Studenten in diese Klausur importiert werden.",
+                    "csvFile": {
+                        "label": ".csv Datei auswählen",
+                        "tooltip": "Bitte wählen Sie die .csv Datei mit den Studenten zum Import aus."
+                    },
+                    "studentsForImport": {
+                        "label": "Studenten zum Importieren",
+                        "tooltip": "Diese Studenten werden importiert beim Klicken auf \"Importieren\"."
+                    },
+                    "numberOfStudents": "Anzahl an Studenten:",
+                    "genericErrorMessage": "Der Import von Studenten in die Klausur ist gescheitert!"
+                }
             },
             "exerciseGroups": "Aufgabengruppen",
             "exerciseGroup": {
