--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -67,12 +67,28 @@
                 "searchNoResults": "No students found",
                 "login": "Login",
                 "name": "Name",
+                "firstName": "First name",
+                "lastName": "Last name",
                 "email": "Email",
-                "visibleRegistrationNumber": "Matriculation number",
+                "registrationNumber": "Matriculation number",
                 "removeFromExam": {
                     "modalQuestion": "Are you sure you want to unregister the student with login <strong>{{ title }}</strong> from this exam?"
                 },
-                "importStudents": "Import students"
+                "importStudents": {
+                    "buttonLabel": "Import students",
+                    "dialogTitle": "Import students into:",
+                    "introText": "This dialog can be used to import students into this exam.",
+                    "csvFile": {
+                        "label": "Select .csv file",
+                        "tooltip": "Please select the .csv file containing the students for the import."
+                    },
+                    "studentsForImport": {
+                        "label": "Students to import",
+                        "tooltip": "These students will be imported when clicking on the \"Import\" button."
+                    },
+                    "numberOfStudents": "Number of students:",
+                    "genericErrorMessage": "Import of students into exam failed!"
+                }
             },
             "exerciseGroups": "Exercise Groups",
             "exerciseGroup": {
