Import with feedback

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -88,6 +88,8 @@
                         "tooltip": "Diese Studenten werden importiert beim Klicken auf \"Importieren\"."
                     },
                     "numberOfStudents": "Anzahl an Studenten:",
+                    "numberOfStudentsImported": "Importiert:",
+                    "numberOfStudentsNotImported": "Nicht gefunden:",
                     "genericErrorMessage": "Der Import von Studenten in die Klausur ist gescheitert!"
                 }
             },
