--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -88,7 +88,7 @@
             "name": "Name: ",
             "login": "Login: ",
             "email": "Email: ",
-            "matricleNumber": "Matrikelnummer: ",
+            "matriculationNumber": "Matrikelnummer: ",
             "id": "ID",
             "type": "Typ",
             "title": "Titel",
