--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -58,6 +58,40 @@
             "assessmentDashboard": "Assessment Dashboard",
             "studentExams": "Student Exams",
             "students": "Students",
+            "examStudents": {
+                "registeredStudents": "Registered students",
+                "searchResults": "search results",
+                "usersPerPage": "{{number}} students per page",
+                "showAllUsers": "Show all students",
+                "searchForUsers": "Register a student for this exam by searching for login or name",
+                "searchNoResults": "No students found",
+                "login": "Login",
+                "name": "Name",
+                "firstName": "First name",
+                "lastName": "Last name",
+                "email": "Email",
+                "registrationNumber": "Matriculation number",
+                "removeFromExam": {
+                    "modalQuestion": "Are you sure you want to unregister the student with login <strong>{{ title }}</strong> from this exam?"
+                },
+                "importStudents": {
+                    "buttonLabel": "Import students",
+                    "dialogTitle": "Import students into:",
+                    "introText": "This dialog can be used to import students into this exam.",
+                    "csvFile": {
+                        "label": "Select .csv file",
+                        "tooltip": "Please select the .csv file containing the students for the import."
+                    },
+                    "studentsForImport": {
+                        "label": "Students to import",
+                        "tooltip": "These students will be imported when clicking on the \"Import\" button."
+                    },
+                    "numberOfStudents": "Number of students:",
+                    "numberOfStudentsImported": "Imported:",
+                    "numberOfStudentsNotImported": "Not found:",
+                    "genericErrorMessage": "Import of students into exam failed!"
+                }
+            },
             "exerciseGroups": "Exercise Groups",
             "exerciseGroup": {
                 "create": "Create new Exercise Group",
