--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -19,7 +19,9 @@
         },
         "examParticipation": {
             "connected": "Connected. Your answers will be saved every 60s.",
-            "disconnected": "Not connected. Go online to save your changes to the server, but you can continue working!"
+            "disconnected": "Not connected. Go online to save your changes to the server, but you can continue working!",
+            "waitForStart": "Please wait.<br><br>This page will refresh automatically, when the exam starts.",
+            "timeUntilPlannedStart": "Time until planned start:"
         },
         "exerciseGroup": {
             "created": "New exercise group created",
