--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -17,6 +17,7 @@
             "created": "New exam created",
             "updated": "Exam updated",
             "validation": {
+                "atLeastOneExercisePerExerciseGroup": "All exercise groups must have at least one exercise.",
                 "numberOfExercisesInExamNotSet": "The number of exercises in the exam is not set.",
                 "tooFewExerciseGroups": "The number of exercise groups is too small.",
                 "tooManyMandatoryExerciseGroups": "The number of mandatory exercise groups is too large."
