--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -15,7 +15,13 @@
             "duration": "Duration",
             "nrOfStudents": "Registered Students",
             "created": "New exam created",
-            "updated": "Exam updated"
+            "updated": "Exam updated",
+            "validation": {
+                "atLeastOneExercisePerExerciseGroup": "All exercise groups must have at least one exercise.",
+                "numberOfExercisesInExamNotSet": "The number of exercises in the exam is not set.",
+                "tooFewExerciseGroups": "The number of exercise groups is too small.",
+                "tooManyMandatoryExerciseGroups": "The number of mandatory exercise groups is too large."
+            }
         },
         "examParticipation": {
             "connected": "Connected. Your answers will be saved every 60s.",
@@ -49,7 +55,7 @@
             "startDate": "Start of working time",
             "endDate": "End of working time",
             "maxPoints": "Maximum number of points in exam",
-            "numberOfExercisesInExam": "Number of exercise groups",
+            "numberOfExercisesInExam": "Number of exercises in exam",
             "randomizeQuestionOrder": "Randomize order of exercise groups",
             "startText": "Exam start text",
             "endText": "Exam end text",
