improve alert messages and translations

--- a/src/main/webapp/i18n/de/exercise.json
+++ b/src/main/webapp/i18n/de/exercise.json
@@ -75,8 +75,9 @@
             "type": "Typ",
             "mcqType": "Multiple Choice Fragen",
             "dndType": "Drag und Drop Fragen",
-            "welcome": "<strong>Herzlich Willkommen bei Artemis!</strong> Wir haben automatisch einen Account für dich erstellt. Klicke auf den <i>Aufgabe starten</i> Button um zu starten!",
-            "personalRepository": "Your personal repository has been set up. Click the <i>Clone repository</i> button to get started!",
+            "welcome": "<strong>Herzlich Willkommen bei Artemis!</strong> Wir haben automatisch einen Account für dich erstellt. Klicke auf den Button <i>Aufgabe starten</i>!",
+            "personalRepositoryClone": "Dein persönliches Repository wurde eingerichtet. Klicke auf den Button <i>Repository klonen</i>!",
+            "personalRepositoryOnline": "Dein persönliches Repository wurde eingerichtet. Klicke auf den Button <i>Programmier Editor öffnen</i>!",
             "startError": "<strong>Uh oh! Etwas ist schief gelaufen... Bitte versuch es in wenigen Minuten noch einmal die Aufgabe zu starten.</strong>",
             "studentName": "Name",
             "studentId": "Login",
