--- a/src/main/webapp/i18n/en/exercise.json
+++ b/src/main/webapp/i18n/en/exercise.json
@@ -75,8 +75,9 @@
             "type": "Type",
             "mcqType": "Multiple Choice Question",
             "dndType": "Drag and Drop Question",
-            "welcome": "<strong>Welcome to Artemis!</strong> We have automatically created an account for you. Click the <i>Start Exercise</i> button to get started!",
-            "personalRepository": "Your personal repository has been set up. Click the <i>Clone repository</i> button to get started!",
+            "welcome": "<strong>Welcome to Artemis!</strong> We have automatically created an account for you. Click the button <i>Start Exercise</i>!",
+            "personalRepositoryClone": "Your personal repository has been set up. Click the button <i>Clone repository</i>!",
+            "personalRepositoryOnline": "Your personal repository has been set up. Click the button <i>Open code editor</i>!",
             "startError": "<strong>Uh oh! Something went wrong... Please try again to start the exercise in a few minutes.</strong>",
             "studentName": "Name",
             "studentId": "Login",
