allow instructors to choose whether automatic assessment proposals are activated in modeligng exercises

--- a/src/main/webapp/i18n/de/textExercise.json
+++ b/src/main/webapp/i18n/de/textExercise.json
@@ -18,7 +18,7 @@
             "exampleSubmissions": "Beispielabgabe",
             "assessedSubmission": "Deine bewertete Abgabe",
             "createExampleSubmissions": "Beispielabgabe erstellen",
-            "automaticAssessmentEnabled": "Automatische Bewertung aktiviert",
+            "automaticAssessmentEnabled": "Automatische Bewertungsvorschläge aktiviert",
             "exampleSubmissionsRequireExercise": "Um eine Beispielabgabe zu erstellen, musst du zunächst die Erstellung der Textaufgabe abschließen.",
             "saveSuccessful": "Dein Antwort wurde erfolgreich gespeichert!",
             "error": "Ein Fehler ist aufgetreten. Bitte versuche es später noch einmal."
