--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -35,6 +35,7 @@
         "studentExams": {
             "title": "Klausuren",
             "generateStudentExams": "Klausuren erstellen",
+            "startExercises": "Aufgaben starten",
             "searchForStudents": "Suche nach Studenten Logins oder Namen (Komma getrennt)",
             "student": "Student",
             "result": "Ergebnis",
