--- a/src/main/webapp/i18n/de/exercise.json
+++ b/src/main/webapp/i18n/de/exercise.json
@@ -25,6 +25,19 @@
             "detail": {
                 "title": "Übung"
             },
+            "import": {
+                "attention": "Achtung! ",
+                "markdownWarning": "Die Aufgabenstellung kann nach dem Import geändert werden.",
+                "loading": "Lade...",
+                "exampleSubmissionsRequireExercise": "Um die Beispielabgaben zu bearbeiten, musst du zunächst den Import der Textaufgabe abschließen.",
+                "table": {
+                    "title": "Titel",
+                    "language": "Programmiersprache",
+                    "course": "Kurs",
+                    "examQuestion": "Klausuraufgabe",
+                    "doImport": "Import"
+                }
+            },
             "exercise": "Aufgabe",
             "results": "Ergebnisse",
             "actions": "Aktionen",
