--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -26,7 +26,9 @@
         "examParticipation": {
             "connected": "Connected. Your answers will be saved every 60s.",
             "disconnected": "Not connected. Go online to save your changes to the server, but you can continue working!",
-            "finishExam": "Finish exam"
+            "finishExam": "Finish exam",
+            "progress": "Exercise {{ current }} of {{ all }}: {{ title }}",
+            "progressSmall": "{{ current }}/{{ all }}"
         },
         "exerciseGroup": {
             "created": "New exercise group created",
