--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -27,7 +27,7 @@
             "connected": "Verbunden. Ihre Antworten werden alle 60s gespeichert.",
             "disconnected": "Nicht verbunden. Gehen Sie online, um Ihre Änderungen auf dem Server zu speichern, aber Sie können weiterarbeiten!",
             "finishExam": "Klausur abgeben",
-            "progress": "Aufgabe {{ current }} von {{ all }}: {{ title }}",
+            "progress": "Aufgabe {{ current }} von {{ all }}",
             "progressSmall": "{{ current }}/{{ all }}"
         },
         "exerciseGroup": {
