--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -27,7 +27,7 @@
             "connected": "Connected. Your answers will be saved every 60s.",
             "disconnected": "Not connected. Go online to save your changes to the server, but you can continue working!",
             "finishExam": "Finish exam",
-            "progress": "Exercise {{ current }} of {{ all }}: {{ title }}",
+            "progress": "Exercise {{ current }} of {{ all }}",
             "progressSmall": "{{ current }}/{{ all }}"
         },
         "exerciseGroup": {
