--- a/src/main/webapp/i18n/en/modelingExercise.json
+++ b/src/main/webapp/i18n/en/modelingExercise.json
@@ -4,7 +4,8 @@
             "home": {
                 "title": "Modeling Exercises",
                 "createLabel": "Create new Modeling Exercise",
-                "editLabel": "Edit Modeling Exercise"
+                "editLabel": "Edit Modeling Exercise",
+                "importLabel": "Import Modeling Exercise"
             },
             "created": "A new Modeling Exercise is created with identifier {{ param }}",
             "updated": "A Modeling Exercise is updated with identifier {{ param }}",
