--- a/src/main/webapp/i18n/de/alert.json
+++ b/src/main/webapp/i18n/de/alert.json
@@ -5,6 +5,6 @@
             "disconnected": "Du bist nicht mehr mit dem Artemis Server verbunden. Bitte überprüfe deine Internet Verbindung.",
             "reconnected": "Du bist wieder mit dem Artemis Server verbunden."
         },
-        "outdatedAlert": "<b>Veraltete Artemis Version:</b> Du benutzt eine alte Artemis Version. Bitte aktualisiere die Seite um Inkompatibilitäten zu vermeiden."
+        "outdatedAlert": "<b>Deine Artemis Version ist veraltet:</b> Bitte lade die Browser Seite neu um Inkompatibilitäten zu vermeiden."
     }
 }
