--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -28,7 +28,8 @@
             "disconnected": "Nicht verbunden. Gehen Sie online, um Ihre Änderungen auf dem Server zu speichern, aber Sie können weiterarbeiten!",
             "finishExam": "Klausur abgeben",
             "progress": "Aufgabe {{ current }} von {{ all }}",
-            "progressSmall": "{{ current }}/{{ all }}"
+            "progressSmall": "{{ current }}/{{ all }}",
+            "submit": "Speichern und Weiter"
         },
         "exerciseGroup": {
             "created": "Neue Aufgabengruppe erstellt",
