--- a/src/main/webapp/i18n/de/textExercise.json
+++ b/src/main/webapp/i18n/de/textExercise.json
@@ -4,7 +4,11 @@
             "home": {
                 "title": "Textaufgaben",
                 "createLabel": "Neue Textaufgabe erstellen",
-                "editLabel": "Textaufgabe bearbeiten"
+                "editLabel": "Textaufgabe bearbeiten",
+                "importLabel": "Neue Textaufgabe importieren"
+            },
+            "import": {
+                "exampleSubmissionsRequireExercise": "Um die Beispielabgaben zu bearbeiten, musst du zunächst den Import der Textaufgabe abschließen."
             },
             "wordCount": "Anzahl der Wörter: {{ count }}",
             "characterCount": "Anzahl der Zeichen: {{ count }}",
