--- a/src/main/webapp/i18n/en/exercise.json
+++ b/src/main/webapp/i18n/en/exercise.json
@@ -25,6 +25,18 @@
             "detail": {
                 "title": "Exercise"
             },
+            "import": {
+                "attention": "Attention! ",
+                "markdownWarning": "You can edit the problem statement after importing the exercise.",
+                "loading": "Loading...",
+                "table": {
+                    "title": "Title",
+                    "language": "Programming Language",
+                    "course": "Course",
+                    "examQuestion": "Exam Question",
+                    "doImport": "Import"
+                }
+            },
             "exercise": "Exercise",
             "results": "Results",
             "actions": "Actions",
